<resources>
    <string name="app_name">Dzienniczek dietetyczny</string>
    <string name="kalk_kaloriiButton">Kalkulator kalorii posiłku</string>
    <string name="kalk_bmiButton">Kalkulator BMI</string>
    <string name="baza_prodButton">Baza produktów</string>
    <string name="wylogujButton">Wyloguj</string>
    <string name="dzien_dietyButton">Dziennik posiłków</string>
    <string name="limit_kaloriiButton">Limit Kalorii</string>
    <string name="title_activity_kalk_kalorii">Kalkulator kalorii posiłku</string>
    <string name="title_activity_kalk_bmi">Kalkulator BMI</string>
    <string name="title_activity_kalendarz">Kalendarz</string>
    <string name="Waga">Podaj wagę [kg]:</string>
    <string name="Wzrost">Podaj wzrost [cm]:</string>
    <string name="Kobieta">Kobieta</string>
    <string name="Mezczyzna">Mężczyzna</string>
    <string name="ButtonOblicz">Oblicz</string>
    <string name="Wynik">BMI</string>
    <string name="Wiek">Podaj wiek:</string>
    <string name="Aktywnosc">Wybierz aktywność fizyczną:</string>
    <string name="AktywnoscMala">Mała</string>
    <string name="AktywnoscUmiark">Umiarkowana</string>
    <string name="AktywnoscWysok">Wysoka</string>
    <string name="PPM">Podstawowa przemiana materii:</string>
    <string name="CPM">Całkowita przemiana materii:</string>

    <string name="Twoja_dieta">Alergie pokarmowe</string>
    <string name="Bezlaktozowa">bezlaktozowa</string>
    <string name="Bezglutenowa">bezglutenowa</string>
    <string name="Brak_alergii">brak/żadna z powyższych</string>
    <string name="Twoja_alergia">Zaznacz rodzaj diety pod względem alergii pokarmowych</string>
    <string name="click_kalendarz">Kalendarz</string>
    <string name="click_Zapisz">Zapisz</string>


    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="podaj_login">Podaj login</string>
    <string name="podaj_haslo">Podaj hasło</string>
    <string name="action_sign_in">Zaloguj się lub zarejestruj</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_limit">Limit kalorii</string>
    <string name="title_activity_logowanie">Panel logowania</string>
    <string name="title_activity_dieta_alergie">Alergie pokarmowe</string>
    <string name="title_activity_baza_produktow">Baza produktów</string>
    <string name="title_activity_kalendarz2">Kalendarz2</string>
    <string name="szukaj">Szukaj...</string>


</resources>
